fix: Use entire screen for smaller devices
Prior to this change mobile devices would only use the middle 50% of the
screen. This commit fixes that by changing the flex basis to 100% for
screens under 768px (roughly the cutoff for tablet devices).

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -51,8 +51,6 @@ a:hover {
 body {
   background-color: $bg;
   color: $fg;
-  margin: 0;
-  padding: 0;
 
   header {
     display: flex;
@@ -70,7 +68,13 @@ body {
     }
 
     nav {
-      flex-basis: 50%;
+      @media (max-width: 768px) {
+        flex-basis: 100%;
+      }
+
+      @media (min-width: 768px) {
+        flex-basis: 50%;
+      }
 
       ul {
         display: inline flex;
@@ -90,7 +94,13 @@ body {
     justify-content: center;
 
     .content {
-      flex-basis: 46%;
+      @media (max-width: 768px) {
+        flex-basis: 100%;
+      }
+
+      @media (min-width: 768px) {
+        flex-basis: 46%;
+      }
     }
   }
 
@@ -102,7 +112,6 @@ body {
     img {
       max-width: 1em;
       max-height: 1em;
-      margin-left: .4em;
     }
   }
 }
